tests/stmt/tforloop_underscore.nim
discard """
  errormsg: "undeclared identifier: '_'"
"""

for _ in ["a"]:
  echo _
